# pawfect_edit_inpaint

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: deploy.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/00-baseline-audit/: 00-01-PLAN.md  00-01-SUMMARY.md  00-02-PLAN.md  00-CONTEXT.md  00-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: main.py
app/routers/: audit.py  inpaint.py
app/services/: audit_runner.py  firebase.py  flux_inpaint.py  pipeline.py
app/utils/: image.py
infra/: pubsub.tf
scripts/: deploy.sh
